examples/kubernetes/k8s-ingress-upate.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress-02
  namespace: default
spec:
  backend: 
    serviceName: my-nginx2
    servicePort: 80
  rules:
  - host: example.ingredemo.com
    http:
      paths:
      - path: /a
        pathType: Prefix
        backend:
          serviceName: cluster-service-test
          servicePort: 80
